CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(ISO3D)

#---------------------------------------------------------

IF (NOT DEFINED ISO3D_DIR)
  GET_FILENAME_COMPONENT(ISO3D_ABSOLUTE_PATH ".." ABSOLUTE)
  SET(ISO3D_DIR ${ISO3D_ABSOLUTE_PATH} CACHE PATH "Iso3D directory")
ENDIF (NOT DEFINED ISO3D_DIR)

SET(CMAKE_INSTALL_PREFIX "${ISO3D_DIR}/")
SET(LIBDIR "../../lib")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${ISO3D_DIR}/lib")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${ISO3D_DIR}/lib")

#---------------------------------------------------------

ADD_COMPILE_OPTIONS(-Wall -Wno-unused-function)

ADD_SUBDIRECTORY(iso3D)
ADD_SUBDIRECTORY(iso3D_MCtable)
ADD_SUBDIRECTORY(Programs)
ADD_SUBDIRECTORY(NrrdIO)

ADD_CUSTOM_TARGET(doc COMMAND doxygen iso3D_doxygen.config)
